--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,14 @@ code {
   border-radius: 10px;
   border: 1px solid #000000;
 }
+@media (max-width: 768px) {
+  *::-webkit-scrollbar-track {
+    display: none;
+  }
+  *::-webkit-scrollbar-thumb {
+    display: none;
+  }
+}
 
 *,
 *::before,
