--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -18,10 +18,12 @@
 
 .text-center {
     text-align: center;
+    padding-right: 0.1rem;
+    padding-left: 0.1rem;
 }
 
 .skills-icon {
-    font-size: 70px;
+    font-size: 3rem;
     transition: all 1s ease;
     /* -webkit-text-stroke: 1px #FFA300; */
     text-shadow: 1px solid #FFA300;
